# adaptive-crag-api-docs

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
configs/: evaluation.yaml  models.yaml  retrieval.yaml  routing.yaml
docs/: architecture.md  experiments.md  failure-taxonomy.md
notebooks/: exploration.ipynb
scripts/: build_indices.py  export_metrics.py  ingest_docs.py  run_benchmark.py
src/api/: app.py
src/chunking/: hierarchy_chunker.py
src/evaluation/: harness.py  metrics.py
src/generation/: answer_generator.py
src/grading/: document_grader.py
src/graph/: state.py  workflow.py
src/indexing/: bm25_index.py  chroma_index.py
src/ingestion/: normalizer.py  stripe_scraper.py
src/observability/: logger.py
src/query/: classifier.py  constraints.py
src/retrieval/: hybrid.py
src/routing/: policy.py
src/ui/: streamlit_app.py
src/verification/: claim_verifier.py
tests/integration/: test_graph_flow.py
tests/regression/: test_benchmark_regression.py
tests/unit/: test_classifier.py  test_grader.py  test_routing.py
